--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
 :root{
-    
+    --cor-de-fundo:#EBECEE;
+    --branco: #ffffff;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --azul: #002F52;
+    --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
+}
+
+body{
+    background-color: var(--cor-de-fundo);
+}
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+ 
+.container__botao:checked.lista-menu{
+    display: block;
 }
